--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,121 @@
-p {
-  font-family: Helvetica, sans-serif;
-  color: #ff0000;
+@charset "UTF-8";
+/*Обнуление*/
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+.container {
+  width: 1920px;
+  min-height: 1024px;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  background-image: url(/img/header-image.jpg);
+  background-position: center;
+  padding: 0 374px 0 376px;
+}
+
+.header__top {
+  border: 1px solid #ff0000;
+  display: flex;
+}
+
+.header__logo {
+  border: 1px solid #f6ff00;
+}
+
+.header__nav {
+  border: 1px solid #1d00f9;
+  display: flex;
+}
+
+.header__list {
+  display: flex;
+}
+
+.header__carousel {
+  border: 1px solid #ff00bb;
+  min-height: 1024px;
 }/*# sourceMappingURL=main.css.map */
