--- a/css/main.css
+++ b/css/main.css
@@ -87,14 +87,59 @@ h6 {
   font-weight: 400;
 }
 
+@font-face {
+  font-family: raleway;
+  src: url("../fonts/raleway/regular/raleway-regular.eot");
+  src: url("../fonts/raleway/regular/raleway-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/regular/raleway-regular.woff2") format("woff2"), url("../fonts/raleway/regular/raleway-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: raleway;
+  src: url("../fonts/raleway/medium/raleway-medium.eot");
+  src: url("../fonts/raleway/medium/raleway-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/medium/raleway-medium.woff2") format("woff2"), url("../fonts/raleway/medium/raleway-medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: raleway;
+  src: url("//fonts/raleway/semi-bold/raleway-semibold.eot");
+  src: url("//fonts/raleway/semi-bold/raleway-semibold.eot?#iefix") format("embedded-opentype"), url("//fonts/raleway/semi-bold/raleway-semibold.woff2") format("woff2"), url("//fonts/raleway/semi-bold/raleway-semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: raleway;
+  src: url("../fonts/raleway/extra-bold/raleway-extrabold.eot");
+  src: url("../fonts/raleway/extra-bold/raleway-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/extra-bold/raleway-extrabold.woff2") format("woff2"), url("../fonts/raleway/extra-bold/raleway-extrabold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: montserrat;
+  src: url("../fonts/montserrat/light/montserrat-light.eot");
+  src: url("../fonts/montserrat/light/montserrat-light.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/light/montserrat-light.woff2") format("woff2"), url("../fonts/montserrat/light/montserrat-light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: montserrat;
+  src: url("../fonts/montserrat/extra-light/montserrat-extralight.eot");
+  src: url("../fonts/montserrat/extra-light/montserrat-extralight.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/extra-light/montserrat-extralight.woff2") format("woff2"), url("../fonts/montserrat/extra-light/montserrat-extralight.woff") format("woff");
+  font-weight: 200;
+  font-style: normal;
+}
 .container {
   width: 1920px;
   min-height: 1024px;
   border: 1px solid #000;
   box-sizing: border-box;
   background-image: url(/img/header-image.jpg);
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   padding: 0 374px 0 376px;
+  background-blend-mode: darken;
 }
 
 .header__top {
@@ -115,7 +160,26 @@ h6 {
   display: flex;
 }
 
+.header__item {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .header__carousel {
   border: 1px solid #ff00bb;
   min-height: 1024px;
+  margin: 0 auto;
+}
+
+.header__subtitle {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.header__title {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }/*# sourceMappingURL=main.css.map */
