--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,8 +8,11 @@
   border: 1px solid #000;
   box-sizing: border-box;
   background-image: url(/img/header-image.jpg);
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   padding: 0 374px 0 376px;
+  background-blend-mode: darken;
 }
 .header {
 }
@@ -28,7 +31,11 @@
   display: flex;
 }
 .header__item {
+  font-family: 'raleway', 'arial', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
 .header__basket-button {
 }
 .header__search-form {
@@ -36,4 +43,17 @@
 .header__carousel {
   border: 1px solid #ff00bb;
   min-height: 1024px;
+  margin: 0 auto;
+}
+.header__subtitle {
+  font-family: 'raleway', 'arial', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.header__title {
+  font-family: 'raleway', 'arial', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.header__text {
 }
