--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,33 @@
-$font-primary: Helvetica, sans-serif;
-$primary-color: #ff0000;
+// color-text for dark backgrounsds
+$color-text-light-primary: #ffffff;
+$color-text-light-secondary: #c7b299;
+$color-text-light-tertialy: #d1d1d1;
+$color-text-light-quaternaly: #615855;
+$color-text-light-quinary: #959595;
+$color-text-light-primary-active: #ffffff;
+$color-text-light-secondary-active: #c7b299;
+$color-text-links: #00bff3;
+
+// color-text for light backgrounsds
+$color-text-dark-primary: #555555;
+$color-text-dark-secondary: #8c8c8c;
+
+// color-icon
+$color-icon-primary: #ffffff;
+$color-icon-secondary: #d3c1ad;
+$color-icon-active: #c7b299;
+
+// color-background
+$color-background-primary: #ffffff;
+$color-background-secondary: #fbfaf8;
+$color-background-tertialy: #191919;
+$color-background-quaternaly: #111111;
+$color-background-active: #362f2d;
+
+// color-button
+$color-button-primary: #998675;
+$color-button-shadows: #736357;
+$color-button-active: #ffffff;
+
+// color-line
+$color-line: #f1eee9;
