--- a/css/main.css
+++ b/css/main.css
@@ -129,16 +129,33 @@ h6 {
   font-weight: 200;
   font-style: normal;
 }
-.container {
+.header__logo {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.header__title {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.header__item-link {
+  font-family: "montserrat", "arial", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.header {
   width: 1920px;
-  min-height: 1024px;
+  height: 1024px;
   border: 1px solid #000;
   box-sizing: border-box;
-  background-image: url(/img/header-image.jpg);
+  background-image: url(/img/background-images/header-image.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 0 374px 0 376px;
   background-blend-mode: darken;
 }
 
@@ -146,14 +163,12 @@ h6 {
   border: 1px solid #ff0000;
   display: flex;
   margin: 30px 0 0 0;
+  padding: 0 374px 0 376px;
 }
 
 .header__logo {
   border: 1px solid #f6ff00;
   box-sizing: border-box;
-  font-family: "raleway", "arial", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   display: flex;
   margin-top: 8px;
 }
@@ -167,7 +182,7 @@ h6 {
   line-height: normal;
   letter-spacing: -0.5px;
   text-align: right;
-  color: #fff;
+  color: #ffffff;
 }
 
 .header__nav {
@@ -192,10 +207,6 @@ h6 {
 }
 
 .header__item-link {
-  border: 1px solid #ffe600;
-  font-family: "montserrat", "arial", sans-serif;
-  font-weight: 300;
-  font-style: normal;
   -o-object-fit: contain;
      object-fit: contain;
   font-size: 14px;
@@ -203,7 +214,8 @@ h6 {
   line-height: normal;
   letter-spacing: normal;
   text-align: left;
-  color: #fff;
+  color: #ffffff;
+  border: 1px solid #ffe600;
   display: flex;
 }
 
@@ -218,24 +230,118 @@ h6 {
 
 .header__carousel {
   border: 1px solid #ff00bb;
+  width: 1920px;
+  min-height: 909px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 150px 0 150px;
 }
 
 .header__carousel-textbox {
   border: 1px solid #000;
+  height: 200px;
+  width: 600px;
+  margin: 0 470px 0 470px;
+  color: #ffffff;
 }
 
-.header__subtitle {
-  font-family: "raleway", "arial", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.header__arrow_left {
+  box-sizing: border-box;
+  border: 1px solid #9e0000;
+  height: 80px;
+  width: 45px;
+  margin-top: 352px;
+}
+
+.header__arrow_right {
+  border: 1px solid #0d01b9;
+  height: 80px;
+  width: 45px;
+  margin-top: 352px;
 }
 
 .header__title {
-  font-family: "raleway", "arial", sans-serif;
-  font-weight: 400;
+  font-size: 52px;
+  font-stretch: normal;
   font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
 }
 
 input[type=search] {
   display: none;
+}
+
+.main {
+  width: 1920px;
+}
+
+.activities {
+  height: 373px;
+  border: 1px solid aqua;
+  background-color: #ffffff;
+}
+
+.screenshots {
+  height: 700px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #fbfaf8;
+}
+
+.purchase-now {
+  height: 150px;
+  border: 1px solid rgb(0, 255, 4);
+  background-image: linear-gradient(to top, #211b19, #4e3427);
+}
+
+.our-latsest-projects {
+  height: 1160px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #ffffff;
+}
+
+.waxom-video-presentation {
+  height: 705px;
+  border: 1px solid rgb(162, 0, 255);
+  background-image: url(/img/background-images/video-presentation.png);
+}
+
+.excellent-for-mobile {
+  height: 695px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #fbfaf8;
+}
+
+.quantities {
+  height: 300px;
+  border: 1px solid rgb(162, 0, 255);
+  background-image: linear-gradient(to top, #211b19, #4e3427);
+}
+
+.recent-posts {
+  height: 750px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #ffffff;
+}
+
+.logotypes {
+  height: 489px;
+  border: 1px solid rgb(162, 0, 255);
+  background-image: url(/img/background-images/mountanes.png);
+}
+
+.contacts {
+  height: 508px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #191919;
+}
+
+.footer {
+  width: 1920px;
+  height: 111px;
+  border: 1px solid rgb(162, 0, 255);
+  background-color: #111111;
 }/*# sourceMappingURL=main.css.map */
