--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,7 @@ h6 {
 .header__carousel {
   border: 1px solid #ff00bb;
   width: 1920px;
-  min-height: 909px;
+  min-height: 800px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -240,14 +240,29 @@ h6 {
   border: 1px solid #000;
   min-height: 200px;
   width: 600px;
-  color: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 261px 0 383px 0;
+  padding: 256px 0 118px 0;
+  margin-bottom: 152px;
+  color: #ffffff;
 }
 .header__paggination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  min-height: 30px;
+  margin-top: 45px;
+  border: 2px solid #ff0105;
+}
+.header__paggination-items {
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  border-radius: 50%;
+  background-color: gold;
 }
 .header__arrow_left {
   box-sizing: border-box;
