--- a/css/main.css
+++ b/css/main.css
@@ -141,13 +141,19 @@ h6 {
   font-style: normal;
 }
 
+.activities__item span {
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
 .header__button, .header__title {
   font-family: "raleway", "arial", sans-serif;
   font-weight: 800;
   font-style: normal;
 }
 
-.header__text, .header__item-link {
+.activities__item p, .header__text, .header__item-link {
   font-family: "montserrat", "arial", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -168,13 +174,11 @@ h6 {
   background-blend-mode: multiply;
 }
 .header__top {
-  border: 1px solid #ff0000;
   display: flex;
   margin: 30px 0 0 0;
   padding: 0 374px 0 376px;
 }
 .header__logo {
-  border: 1px solid #f6ff00;
   box-sizing: border-box;
   display: flex;
   margin-top: 8px;
@@ -191,7 +195,6 @@ h6 {
   color: #ffffff;
 }
 .header__nav {
-  border: 1px solid #1d00f9;
   display: flex;
   margin-left: 185px;
   padding: 28px;
@@ -199,13 +202,11 @@ h6 {
 }
 .header__list {
   display: flex;
-  border: 1px solid #000;
   box-sizing: border-box;
   width: 100%;
   justify-content: space-between;
 }
 .header__item {
-  border: 1px solid #e90707;
   display: flex;
 }
 .header__item-link {
@@ -217,7 +218,6 @@ h6 {
   letter-spacing: normal;
   text-align: left;
   color: #ffffff;
-  border: 1px solid #ffe600;
   display: flex;
 }
 .header__basket-button {
@@ -227,8 +227,21 @@ h6 {
 .header__search-form {
   padding: 23px 0 10px 0;
 }
+.header__search-form input[type=search] {
+  width: 40px;
+  height: 40px;
+  outline: none;
+  background-image: url("../img/icons/search-icon.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: 1px solid gray;
+}
+.header__search-form input[type=search]:focus {
+  width: 300px;
+  transition: width 1s ease-out;
+  background-position: right;
+}
 .header__carousel {
-  border: 1px solid #ff00bb;
   width: 1920px;
   min-height: 800px;
   margin: 0 auto;
@@ -237,7 +250,6 @@ h6 {
   padding: 0 150px 0 150px;
 }
 .header__carousel-textbox {
-  border: 1px solid #000;
   min-height: 200px;
   width: 600px;
   display: flex;
@@ -247,38 +259,18 @@ h6 {
   margin-bottom: 152px;
   color: #ffffff;
 }
-.header__paggination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  min-height: 30px;
-  margin-top: 45px;
-  border: 2px solid #ff0105;
-}
-.header__paggination-items {
-  display: block;
-  width: 10px;
-  height: 10px;
-  margin: 0 5px;
-  border-radius: 50%;
-  background-color: gold;
-}
 .header__arrow_left {
   box-sizing: border-box;
-  border: 1px solid #9e0000;
   height: 80px;
   width: 45px;
   margin-top: 352px;
 }
 .header__arrow_right {
-  border: 1px solid #0d01b9;
   height: 80px;
   width: 45px;
   margin-top: 352px;
 }
 .header__subtitle {
-  background: #000;
   align-items: center;
   font-size: 36px;
   font-weight: 500;
@@ -289,7 +281,6 @@ h6 {
   text-align: center;
 }
 .header__title {
-  background: #ccc;
   margin: 0 auto;
   font-size: 52px;
   font-stretch: normal;
@@ -300,7 +291,6 @@ h6 {
   color: #ffffff;
 }
 .header__text {
-  background: #827676;
   margin: 0 auto;
   font-size: 16px;
   font-weight: 300;
@@ -339,8 +329,26 @@ h6 {
 .header__button:visited {
   color: #fff;
 }
-.header input[type=search] {
-  display: none;
+.header__paggination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 30px;
+  margin-top: 45px;
+}
+.header__paggination-item {
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  border-radius: 50%;
+  background-color: gold;
+}
+.header__paggination-item:hover {
+  background-color: transparent;
+  border: 2px solid gold;
+  transform: scale(1.2);
 }
 
 .main {
@@ -349,8 +357,57 @@ h6 {
 
 .activities {
   height: 373px;
-  border: 1px solid aqua;
   background-color: #ffffff;
+  display: flex;
+}
+.activities .container {
+  border: 1px solid #000;
+  margin: auto;
+  width: 1166px;
+  height: 215px;
+  display: flex;
+}
+.activities__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.activities__item img {
+  display: block;
+}
+.activities__item span {
+  font-size: 22px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #555555;
+}
+.activities__item p {
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  text-align: center;
+  color: #8c8c8c;
+}
+.activities__item:after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 3px;
+  background-color: #f1eee9;
+}
+.activities__item:hover span {
+  color: #c7b299;
+}
+.activities__item:hover:after {
+  background-color: #c7b299;
 }
 
 .screenshots {
