--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,14 +18,14 @@
   background-blend-mode: multiply;
   // Header-top ==================================================
   &__top {
-    border: 1px solid #ff0000;
+    // border: 1px solid #ff0000;
     display: flex;
     margin: 30px 0 0 0;
     padding: 0 374px 0 376px;
   }
   &__logo {
     @extend %font-first-regular;
-    border: 1px solid #f6ff00;
+    // border: 1px solid #f6ff00;
     box-sizing: border-box;
     display: flex;
     margin-top: 8px;
@@ -42,7 +42,7 @@
     color: $color-text-light-primary;
   }
   &__nav {
-    border: 1px solid #1d00f9;
+    // border: 1px solid #1d00f9;
     display: flex;
     margin-left: 185px;
     padding: 28px;
@@ -50,13 +50,13 @@
   }
   &__list {
     display: flex;
-    border: 1px solid #000;
+    // border: 1px solid #000;
     box-sizing: border-box;
     width: 100%;
     justify-content: space-between;
   }
   &__item {
-    border: 1px solid #e90707;
+    // border: 1px solid #e90707;
     display: flex;
   }
   &__item-link {
@@ -68,8 +68,7 @@
     letter-spacing: normal;
     text-align: left;
     color: $color-text-light-primary;
-    border: 1px solid #ffe600;
-
+    // border: 1px solid #ffe600;
     display: flex;
   }
   &__basket-button {
@@ -78,10 +77,24 @@
   }
   &__search-form {
     padding: 23px 0 10px 0;
+    input[type='search'] {
+      width: 40px;
+      height: 40px;
+      outline: none;
+      background-image: url('../img/icons/search-icon.svg');
+      background-size: contain;
+      background-repeat: no-repeat;
+      border: 1px solid gray;
+    }
+    input[type='search']:focus {
+      width: 300px;
+      transition: width 1s ease-out;
+      background-position: right;
+    }
   }
   // Header-carousel ==================================================
   &__carousel {
-    border: 1px solid #ff00bb;
+    // border: 1px solid #ff00bb;
     width: 1920px;
     min-height: 800px;
     margin: 0 auto;
@@ -90,7 +103,7 @@
     padding: 0 150px 0 150px;
   }
   &__carousel-textbox {
-    border: 1px solid #000;
+    // border: 1px solid #000;
     min-height: 200px;
     width: 600px;
     display: flex;
@@ -100,37 +113,17 @@
     margin-bottom: 152px;
     color: $color-text-light-primary;
   }
-  // Header__paggination ====================================================
-  &__paggination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    // background-color: green;
-    min-height: 30px;
-    margin-top: 45px;
-    border: 2px solid #ff0105;
-  }
-
-  &__paggination-items {
-    display: block;
-    width: 10px;
-    height: 10px;
-    margin: 0 5px;
-    border-radius: 50%;
-    background-color: gold;
-  }
 
   // carousel-arrows =========================================================
   &__arrow_left {
     box-sizing: border-box;
-    border: 1px solid #9e0000;
+    // border: 1px solid #9e0000;
     height: 80px;
     width: 45px;
     margin-top: 352px;
   }
   &__arrow_right {
-    border: 1px solid #0d01b9;
+    // border: 1px solid #0d01b9;
     height: 80px;
     width: 45px;
     margin-top: 352px;
@@ -140,7 +133,7 @@
 
   &__subtitle {
     // flex: 1 1;
-    background: #000;
+    // background: #000;
     align-items: center;
     @extend %font-first-medium;
     font-size: 36px;
@@ -153,7 +146,7 @@
   }
   &__title {
     // flex: 1 1 905px;
-    background: #ccc;
+    // background: #ccc;
     margin: 0 auto;
     @extend %font-first-extrabold;
     font-size: 52px;
@@ -166,7 +159,7 @@
   }
   &__text {
     // flex: 1 1 905px;
-    background: #827676;
+    // background: #827676;
     margin: 0 auto;
     @extend %font-second-light;
     font-size: 16px;
@@ -209,11 +202,32 @@
     color: #fff;
   }
 
-  input[type='search'] {
-    display: none;
+  // Header__paggination ====================================================
+  &__paggination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    // background-color: green;
+    min-height: 30px;
+    margin-top: 45px;
+    // border: 2px solid #ff0105;
+  }
+
+  &__paggination-item {
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    border-radius: 50%;
+    background-color: gold;
+    &:hover {
+      background-color: transparent;
+      border: 2px solid gold;
+      transform: scale(1.2);
+    }
   }
 }
-
 // main block ==================================================
 .main {
   width: 1920px;
@@ -221,8 +235,67 @@
 
 .activities {
   height: 373px;
-  border: 1px solid aqua;
+  // border: 1px solid aqua;
   background-color: $color-icon-primary;
+  display: flex;
+  .container {
+    border: 1px solid #000;
+    margin: auto;
+    width: 1166px;
+    height: 215px;
+    display: flex;
+  }
+  &__item {
+    // border: 1px solid #e80606;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      display: block;
+      // fill: green;
+      // margin: 0 0 20px 0;
+      // &:hover {
+      //   fill: gold;
+      // }
+    }
+    span {
+      @extend %font-first-semibold;
+      font-size: 22px;
+      font-weight: 600;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center;
+      color: $color-text-dark-primary;
+    }
+    p {
+      @extend %font-second-light;
+      font-size: 14px;
+      font-weight: 300;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.71;
+      letter-spacing: normal;
+      text-align: center;
+      color: $color-text-dark-secondary;
+    }
+    &:after {
+      content: '';
+      display: block;
+      width: 70px;
+      height: 3px;
+      background-color: $color-line;
+    }
+    &:hover span {
+      color: $color-icon-active;
+    }
+    &:hover:after {
+      background-color: $color-icon-active;
+    }
+  }
 }
 
 .screenshots {
@@ -230,13 +303,11 @@
   border: 1px solid rgb(162, 0, 255);
   background-color: $color-background-secondary;
 }
-
 .purchase-now {
   height: 150px;
   border: 1px solid rgb(0, 255, 4);
   background-image: linear-gradient(to top, #211b19, #4e3427);
 }
-
 .our-latsest-projects {
   height: 1160px;
   border: 1px solid rgb(162, 0, 255);
@@ -272,7 +343,6 @@
   border: 1px solid rgb(162, 0, 255);
   background-color: $color-background-tertialy;
 }
-
 .footer {
   width: 1920px;
   height: 111px;
